Added gradle support to docs